some changes to the interface has been made manily in the queston.html, onlly consider first question and answer all other are placeholder vakue.

--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/home2.css" />
+    <style>
+      .red {
+        height: 81vh;
+      }
+    </style>
   </head>
   <body>
     <div>
