--- a/html/s_add_question.html
+++ b/html/s_add_question.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="../css/s_main.css" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <script src="../css/s_main.js"></script>
-
+        <style>
+          .red {
+            height: 81vh;
+          }
+        </style>
     
   </head>
 
