--- a/html/home.html
+++ b/html/home.html
@@ -26,11 +26,11 @@
           Viva - Link
         </div>
         <nav>
-          <a href="home.html">Home</a>
-          <a href="login.html">Login</a>
-          <a href="admin_login.html">Admin login</a>
+          <a href="./home.html">Home</a>
+          <a href="./login.html">Login</a>
+          <a href="./admin_login.html">Admin login</a>
           <a href="./question.html">Question</a>
-          <a href="#">Contact</a>
+          <a href="./contact.html">Contact</a>
           <div class="animation start-home"></div>
         </nav>
       </div>
