--- a/html/admin_login.html
+++ b/html/admin_login.html
@@ -28,7 +28,7 @@
           <a href="./login.html">Login</a>
           <a href="./admin_login.html">Admin login</a>
           <a href="./question.html">Question</a>
-          <a href="#">Contact</a>
+          <a href="./contact.html">Contact</a>
           <div class="animation start-home"></div>
         </nav>
       </div>
