--- a/html/home.html
+++ b/html/home.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/box_design.css" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
+      function fade() {
+        $("#form").fadeOut(300);
+        $(".wrapper").addClass("form-success");
+      }
+    </script>
+
     <style>
       .red {
-        height: 81vh;
+        height: calc(100vh - 128px);
       }
     </style>
   </head>
@@ -18,23 +28,66 @@
         <div class="logo">
           <img
             class="img1"
-            src="../Images/Logo.png"
+            src="../Images/subject-icon-12.jpg"
             alt="logo"
             width="40px"
             height="40px"
           />
-          Viva - Link
+          <div style="display: inline-block;">VIVA - LINK</div>
         </div>
         <nav>
           <a href="./home.html">Home</a>
-          <a href="./login.html">Login</a>
+
           <a href="./admin_login.html">Admin login</a>
           <a href="./question.html">Question</a>
           <a href="./contact.html">Contact</a>
           <div class="animation start-home"></div>
         </nav>
       </div>
-      <div class="red">fwefwe</div>
+      <div class="red">
+        <div class="wrapper">
+          <div class="container">
+            <form class="form">
+              <label
+                ><h1
+                  style="color:  #39424e;font-family:serif;  font-weight: bold; margin-bottom: 30px;"
+                >
+                  WELCOME
+                </h1>
+              </label>
+              <div id="form">
+                <input type="text" placeholder="Username" />
+                <input type="password" placeholder="Password" />
+                <button type="button" id="login-button" onclick="fade()">
+                  Login
+                </button>
+              </div>
+            </form>
+          </div>
+
+          <ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+      <div style="background: #39424e;height: 60px;"></div>
     </div>
   </body>
 </html>
