--- a/html/home.html
+++ b/html/home.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Viva-Link &nbsp; Home</title>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="../css/home.css" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../images/subject-icon-12.jpg"
+    />
     <link rel="stylesheet" href="../css/box_design.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -22,6 +28,7 @@
       }
     </style>
   </head>
+
   <body>
     <div>
       <div class="navi">
