--- a/html/s_all_question.html
+++ b/html/s_all_question.html
@@ -4,66 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Viva-Link &nbsp;Questions</title>
     <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/question.css" />
-    <link rel="stylesheet" href="../css/question copy.css" />
-    <link rel="stylesheet" href="../css/s_main.css" />
+      <link rel="stylesheet" href="../css/s_home.css">
+        <link rel="shortcut icon" type="image/png" href="../images/subject-icon-12.jpg" />
+
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link rel="stylesheet" type="text/css" href="../css/style1.css" />
     <script src="../css/s_main.js"></script>
     <style>
     .red {
   overflow-y: scroll;
-  height: 81vh;
+  height: 83vh;
 }
 
     </style>
   </head>
 
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&times;</a
-      >
-      <div class="menu">Menu</div>
-      <a href="./s_home.html">Home</a>
-      <a href="./s_all_question.html" style="color: white"> All Questions</a>
-      <a href="./s_students.html">History</a>
-      <a href="./s_registered_student.html">Registered Students</a>
-      <a href="./s_add_question.html">Add Questions</a>
+<div>
+  <div class="navi">
+    <div class="logo">
+      <img class="img1" src="../Images/subject-icon-12.jpg" alt="logo" width="40px" height="40px" />
+      <div style="display: inline-block;">VIVA - LINK</div>
+    </div>
+    <nav>
+      <a href="./s_all_question.html">Questions</a>
+
+      <a href="./s_history.html">History</a>
+      <a href="./s_registered_student.html">Students</a>
       <a href="./s_add_student.html">Add Students</a>
-      <a href="#">Logout</a>
-    </div>
-
-    <div class="hamburger">
-      <span onclick="openNav()"
-        ><img
-          src="../Images/Hamburger_icon.svg.png"
-          height="50px"
-          width="50px"
-          alt="Hamburger_icon"
-      /></span>
-    </div>
-
-    <div id="main" onclick="closeNav()">
-      <div>
-        <div class="logo">
-          <div class="logo_conti">
-            <img
-              class="img1"
-              src="../Images/Logo.png"
-              alt="logo"
-              width="40px"
-              height="40px"
-            />
-            <div class="name">Viva - Link</div>
-          </div>
-          <div class="timer">
-            <h2><span id="time"></span></h2>
-          </div>
-        </div>
-
+      <a href="./s_add_question.html">Add Questions</a>
+      <div class="animation start-home"></div>
+    </nav>
+  </div>
         <div class="red">
     
           <table class="data-table">
