--- a/html/admin_login.html
+++ b/html/admin_login.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <title>Viva-Link &nbsp; Admin Login</title>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
     <link rel="stylesheet" href="../css/home.css" />
     <link rel="stylesheet" href="../css/box_design.css" />
-
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../images/subject-icon-12.jpg"
+    />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script>
