--- a/html/question.html
+++ b/html/question.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <title>Viva-Link &nbsp; Question</title>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/home.css" />
     <link rel="stylesheet" href="../css/question.css">
+        <link rel="shortcut icon" type="image/png" href="../images/subject-icon-12.jpg" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../css/s_main.js"></script>
 
@@ -55,7 +57,7 @@
             timer = duration;
           }
           if(timer == 60){
-             document.getElementById("time").style.color = "#800000";
+             document.getElementById("time").style.color = "red";
              document.getElementById("alert").style.visibility = "visible";
              document.getElementById("alert").style.opacity = "1";
              document.getElementById("wholebody").style.opacity=".65";
@@ -66,7 +68,7 @@
       }
 
       window.onload = function() {
-        var fiveMinutes = 60 * 5,
+        var fiveMinutes = 60 * 1.1,
           display = document.querySelector("#time");
         startTimer(fiveMinutes, display);
       };
